--- a/views/one_project.erb
+++ b/views/one_project.erb
@@ -1,16 +1,39 @@
-<h1><%= @project['name'] %></h1>
+<h1><%= @project.name %></h1>
 
-<!-- <h3>Project:
-<% if @volunteer['project_id']=='0'%>
-  None
-<% else %>
-  <%= @project['name'] %>
-<% end %>
-</h3> -->
-
+<h3>Current Volunteers</h3>
+<form class="" action="\projects\<%= @project.id %>" method="post">
+  <div class="form-group">
+  <% @volunteers.each do |volunteer| %>
+    <% if volunteer.project_id==@project.id %>
+    <div>
+      <input type="checkbox" name="volunteer_ids[]" value="<%= volunteer.id %>"><%= volunteer.name %>
+    </div>
+    <% end  %>
+  <% end  %>
+  </div>
+  <button type="submit" name="button">Unassign From Project</button>
+</form>
+<br>
+<h3>Available Volunteers</h3>
+<form class="" action="\projects\<%= @project.id %>" method="post">
+  <input type="hidden" name="_method" value="patch">
+  <div class="form-group">
+  <% @volunteers.each do |volunteer| %>
+    <% if volunteer.project_id=='0' %>
+    <div>
+      <input type="checkbox" name="volunteer_ids[]" value="<%= volunteer.id %>"><%= volunteer.name %>
+    </div>
+    <% end  %>
+  <% end  %>
+  </div>
+  <button type="submit" name="button">Assign to Project</button>
+</form>
 <!--List of Volunteers on staff with unassign and add hours buttons  -->
-<!--Checklist of available Volunteers with assign button -->
-
-
-
+<br>
+<form class="" action="/" method="post">
+  <input type="hidden" name="_method" value="delete">
+  <input type="hidden" name="project_id" value="<%= @project.id %>">
+  <button type="submit" name="button">Delete Project</button>
+</form>
+<br>
 <a href="/" class='btn btn-info'>Return to Projects</a>
