--- a/views/all_volunteers.erb
+++ b/views/all_volunteers.erb
@@ -1,7 +1,7 @@
 <h1>All Volunteers</h1>
 <ul>
   <% @volunteers.each do |volunteer|  %>
-  <li><a href="\volunteers\<%= volunteer.id %>"><%= volunteer.name %></a></li>
+  <li><a href="/volunteers/<%= volunteer.id %>"><%= volunteer.name %></a></li>
   <% end  %>
 </ul>
 
@@ -11,7 +11,7 @@
 <form action="/volunteers" method="post">
   <div class="form-group">
     <label for="volunteer_name">Volunteer Name</label>
-    <input type="text" name="volunteer_name">
+    <input type="text" name="volunteer_name" required>
   </div>
   <button type="submit" name="button">Add Volunteer</button>
 </form>
